--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "version": "1.0.0",
     "main": "bot.js",
     "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node bot.js"
     },
     "dependencies": {
-        "discord.js": "^12.5.1"
+        "discord.js": "^12.2.0",
+        "dotenv": "^8.2.0"
     }
 }
